# meshtastic-terminal

./: README.es.md  README.md  index.html  inline.json  package-lock.json  package.json  vite.config.ts
design/: meshtastic-terminal.html
src/: App.css  App.tsx  alerts.test.ts  alerts.ts  battery.test.ts  battery.ts  channelUrl.test.ts  channelUrl.ts  db.ts  export.ts  fmt.test.ts  fmt.ts  handshake.test.ts  handshake.ts  i18n.test.ts  i18n.ts  main.tsx  mesh.test.ts  mesh.ts  radio.ts  store.ts  theme.test.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tcp.rs
src/locales/: en.ts
src/screens/: Chat.tsx  Config.tsx  MapView.tsx  Mesh.tsx  Nodes.tsx  Telemetry.tsx
src/shims/: node.ts  process.ts
src/transport/: ble.ts  bridge.ts  fake.test.ts  fake.ts  serial.ts  tcp.ts
